# mkdocs-interface-diagrams

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
interface_diagrams/: __init__.py  _hooklogic.py  cache.py  cli.py  edges.py  elk.py  embed.py  excalidraw.py  generate.py  manifest.py  model.py  parse.py  plugin.py  views.py  workers.py
interface_diagrams/_assets/: diagram-lightbox.js  diagram.css
js/: build_bundles.mjs  elk_layout.mjs  package-lock.json  package.json  render_svg.mjs
tests/: __init__.py  helpers.py  test_bundles_smoke.py  test_cache.py  test_check_integration.py  test_cli.py  test_derivation.py  test_edges.py  test_elk_spec.py  test_embed.py  test_excalidraw.py  test_hooks.py  test_parity.py  test_parsing.py  test_plugin_build.py  test_plugin_discovery.py  test_smoke.py  test_workers.py
tests/fixtures/: elk_spec.json  excalidraw_elements.json
tests/fixtures/parity/: controller.md  index.md
tests/fixtures/site/: mkdocs.yml
tests/fixtures/site/docs/: index.md
tests/fixtures/site/docs/parity/: display.md  sensor.md
