[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-interface-diagrams"
version = "0.0.0"
description = "Interface-documentation diagram generator and mkdocs plugin (ELK + Excalidraw)."
requires-python = ">=3.11"
dependencies = ["pillow>=10.0"]

[project.optional-dependencies]
mkdocs = ["mkdocs>=1.6"]

[project.scripts]
interface-diagrams = "interface_diagrams.cli:main"

[project.entry-points."mkdocs.plugins"]
interface-diagrams = "interface_diagrams.plugin:DiagramsPlugin"

[dependency-groups]
dev = ["pytest>=8", "mkdocs>=1.6", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["interface_diagrams"]

[tool.hatch.build.targets.wheel.force-include]
"interface_diagrams/_js" = "interface_diagrams/_js"
"interface_diagrams/_fonts" = "interface_diagrams/_fonts"
"interface_diagrams/_assets" = "interface_diagrams/_assets"
